@@ -1,3 +1,8 @@
+2007-08-24  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclCompile.c: replaced copy loop that tripped some
+	compilers with memmove [Bug 1780870]
+
 2007-08-14  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/trace.test:	Backport some tests.
